Added video link to cyber page

--- a/cyber.html
+++ b/cyber.html
@@ -14,13 +14,16 @@
   <h1>Cybersecurtiy Articles</h1>
     <p>This page holds articles that relate to cybersecurity that I found intresting</p>
     
-    <h1>From <a href="https://cyware.com/cyber-security-news-articles">CYWARE</a></h1>
+    <h1>Article From <a href="https://cyware.com/cyber-security-news-articles">CYWARE</a></h1>
       <h2> Linux servers under attack by Lilocked ransomware </h2>
       <img src="cyware_image.jpg" alt="A partial keyboard where the enter key has a skull and cross bones and reads infected.">
         <p>Article <a href="https://cyware.com/news/linux-servers-under-attack-by-lilocked-ransomware-e9c4f966">Link</a></p>
-    <h1>From <a href="https://threatpost.com/">threatpost</a></h1>
+    <h1>Article From <a href="https://threatpost.com/">threatpost</a></h1>
       <h2>Telnet Backdoor Opens More Than 1M IoT Radios to Hijack</h2>
       <img src="threatpost_image.jpg" alt="A red background with a web of technological things like cameras and wifi signals being infected.">
       <p>Article <a href="https://threatpost.com/million-iot-radios-hijack-telnet-backdoor/148123/">Link</a></p>
+	<h1>Video From <a htref="https://www.youtube.com/">YouTube</a></h1>
+	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/NfJf_-7O00w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
