Change intro to page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <li><a href="cyber.html">Cyber</a></li>
   </ul>
   
-  <h1>Get to know Mark Littlefield</h1>
-    <p>Welcome to my site, it is a simple site consisting of three pages. The first page you are currently on and is the home page! It is all about me!
-       The second is my resume written out in HTML. 
-       The third is some intresting stuff I have found about the Cyber world this week.</p>
+  <h1>The Life of Mark Littlefield</h1>
+    <p>The next few section will tell you about my life. From early childhood, to middle childhood and the teen years, until finally my college experiance. </p>
     
   <h2>Early Childhood</h2>
     <p>I was born in Elmhurst, Illinois to two loving parent Mark and Karen Littlefield. Yes, I am a Juinor. I was a single child for 18 months and then my younger sister Jessica was born,
