Removed the partial address

--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
   </ul>
   
   <h1>Mark Littlefield Jr</h1>
-  <p>Address Bartlett,IL 60103</p>
+  <p>My Address</p>
   <p>Phone: (123) 345 6789</p>
   <p>Email: mlittlefield@hawk.iit.edu</p>
   <p>LinkedIn: <a href="https://www.linkedin.com">https://www.linkedin.com</a></p>
