--- a/cyber.html
+++ b/cyber.html
@@ -1,29 +1,29 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8"/>
-  <title>ITMD-361 Internet Technologies and Web Design</title>
-</head>
-<body>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="resume.html">Resume</a></li>
-    <li><a href="cyber.html">Cyber</a></li>
-  </ul>
-  
-  <h1>Cybersecurtiy Articles</h1>
+  <head>
+    <meta charset="UTF-8"/>
+    <title>ITMD-361 Internet Technologies and Web Design</title>
+  </head>
+  <body>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="cyber.html">Cyber</a></li>
+    </ul>
+    <h1>Cybersecurtiy Articles</h1>
     <p>This page holds articles that relate to cybersecurity that I found intresting</p>
-    
     <h1>Article From <a href="https://cyware.com/cyber-security-news-articles">CYWARE</a></h1>
-      <h2> Linux servers under attack by Lilocked ransomware </h2>
-      <img src="cyware_image.jpg" alt="Keyboard that says infected">
-        <p>Article <a href="https://cyware.com/news/linux-servers-under-attack-by-lilocked-ransomware-e9c4f966">Link</a></p>
+    <h2> Linux servers under attack by Lilocked ransomware </h2>
+    <img src="images/cyware_image.jpg" alt="Keyboard that says infected">
+    <p>Article <a href="https://cyware.com/news/linux-servers-under-attack-by-lilocked-ransomware-e9c4f966">Link</a></p>
     <h1>Article From <a href="https://threatpost.com/">threatpost</a></h1>
-      <h2>Telnet Backdoor Opens More Than 1M IoT Radios to Hijack</h2>
-      <img src="threatpost_image.jpg" alt="An infcted technology web.">
-      <p>Article <a href="https://threatpost.com/million-iot-radios-hijack-telnet-backdoor/148123/">Link</a></p>
-	<h1>Video From <a href="https://www.youtube.com/">YouTube</a></h1>
-	
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/NfJf_-7O00w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</body>
+    <h2>Telnet Backdoor Opens More Than 1M IoT Radios to Hijack</h2>
+    <img src="images/threatpost_image.jpg" alt="An infcted technology web.">
+    <p>Article <a href="https://threatpost.com/million-iot-radios-hijack-telnet-backdoor/148123/">Link</a></p>
+    <h1>Video From <a href="https://www.youtube.com/">YouTube</a></h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/NfJf_-7O00w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </body>
 </html>
+
